Create Client Routes, Controllers, and api-docs
